# stepper-ninja

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  PINOUT.md  README.de.md  README.hi.md  README.hu.md  README.md  README.pt-BR.md  pio_settings.h
.github/: FUNDING.yml
binary/: breakoutboard-v1-digital-pico-W5500.uf2  breakoutboard-v1-digital-pico2-W5500.uf2  stepper-ninja-W5100S.uf2  stepper-ninja-W5500.uf2  stepper-ninja-pico-W5100S.uf2  stepper-ninja-pico-W5500.uf2  stepper-ninja-pico2-W5100S.uf2  stepper-ninja-pico2-W5500.uf2  stepper-ninja-w5100s.uf2  stepper-ninja-w5500.uf2  stepper-ninja.uf2
binary/4sg2enc2out1pwm4inp/: stepper-ninja-W5100S.uf2
configurations/: 2stepgen_2encoder_8input_3output_pwm_spindleindex.h  4stepgen_1encoder_6input_3output_pwm_spindleindex.h  4stepgen_1encoder_8input_1output_pwm_spindleindex.h  4stepgen_2encoder_4input_3output_pwm_spindleindex.h  README.md
configurations/BreakoutBoardV1.0/: config.h  install_config.sh
configurations/Chinese_Printerport_BOB/: Chinese_Printerport_BOB.h  README.md
configurations/PicoBOB-DLX/: picoBOB-DLX.h
configurations/Printerport_BOB/: Chinese_Printerport_BOB.h
configurations/RaspberryPI/: README.md  config.h  install_raspberrypi.sh
configurations/RaspberryPI/configs/raspberrypi/: README.md  raspberrypi.ini  stepper-ninja-spi.hal
configurations/RaspberryPI/simple_breakoutboard_pi/: simple_breakoutboard_pi.kicad_pcb  simple_breakoutboard_pi.kicad_prl  simple_breakoutboard_pi.kicad_pro  simple_breakoutboard_pi.kicad_sch  ~simple_breakoutboard_pi.kicad_sch.lck
configurations/RaspberryPI/simple_breakoutboard_pi/pcbway_production/2026-05-04-18-21-49/: simple_breakoutboard_pi.kicad_pcb_bom.csv  simple_breakoutboard_pi.kicad_pcb_netlist.ipc  simple_breakoutboard_pi.kicad_pcb_positions.csv
configurations/RaspberryPI4/: README.md  config.h
configurations/configurator/: configurator.py  gui.py  predefined.py
configurations/configurator/components/: WeActRP2350B.json  encoder.json  input.json  invert.json  output.json  pico.json  pullup.json  pwm.json  stepgen.json
docs/: CONFIG.de.md  CONFIG.hi.md  CONFIG.hu.md  CONFIG.md  CONFIG.pt-BR.md  HAL-PINS.md  INSTALL.de.md  INSTALL.hi.md  INSTALL.hu.md  INSTALL.md  INSTALL.pt-BR.md  IPCONFIG.MD  IPCONFIG.de.md  IPCONFIG.hi.md  IPCONFIG.hu.md  IPCONFIG.pt-BR.md  MAKE-YOUR-OWN-BREAKOUTBOARD.de.md  MAKE-YOUR-OWN-BREAKOUTBOARD.hi.md  MAKE-YOUR-OWN-BREAKOUTBOARD.hu.md  MAKE-YOUR-OWN-BREAKOUTBOARD.md  MAKE-YOUR-OWN-BREAKOUTBOARD.pt-BR.md  README.md  configure-stepper-ninja.html  stepper_ninja_pulse_width.htm  working-principles.md
firmware/: CMakeLists.txt  build.sh  build_breakoutboard.sh  ioLibraryDriver.sh
firmware/inc/: config.h  footer.h  internals.h  kbmatrix.h  main.h
firmware/modules/: breakoutboard_100.c  breakoutboard_user.c  flash_config.c  mcp4725.c  pio_utils.c  pwm.c  serial_terminal.c  sh1106.c  transmission.c
firmware/modules/inc/: breakoutboard.h  flash_config.h  jump_table.h  mcp4725.h  pio_settings.h  pio_settings_old.h  pio_utils.h  pwm.h  transmission.h
firmware/pio/: freq_generator.pio  quadrature_encoder pico2.pio  step_counter.pio
firmware/quadrature_encoder_substep/: quadrature_encoder_substep.c  quadrature_encoder_substep.h  quadrature_encoder_substep.pio
firmware/src/: main.c
firmware/w5100s-evb-pico/: CMakeLists.txt  buildall.sh  pico_debug.cfg
firmware/w5100s-evb-pico/inc/: config.h  flash_config.h  jump_table.h  main.h  pio_settings.h  ringbuffer.h  serial_terminal.h  sh1106.h  transmission.h
firmware/w5100s-evb-pico/src/: config.c  freq_generator.pio  main.c  ringbuffer.c  serial_terminal.c  sh1106.c  transmission.c
hal-driver/: CMakeLists.txt  CmakeLists.txt  REAME.md  bcm2835rt.h  chuck-handler.c  chuck-handler.md  cycle-start-guard.c  gmoccapy.py  hal_pin_macros.h  hal_util.c  hal_util.h  halrun-stepper-ninja.sh  install.sh  install_analog.sh  instructions.md  internals.h  io-samurai.hal  jump_table.h  kbmatrix.h  lubrication-guard.c  make_symbols.sh  make_symlinks.sh  new_stepgen_cals.py  pid-ninja.c  pid-ninja.md  pio_setting_generator.py  pio_settings.h  plc-ninja.c  plc-ninja.md  polygon-ninja.c  polygon-ninja.md  rip_install.sh  spindle-orient.c  stepgen-ninja.c  stepgen-ninja.hal  stepper-ninja.c  transmission.c  transmission.h  udp-warrior.c
hal-driver/modules/: breakoutboard_1.c  breakoutboard_2.c  breakoutboard_3.c  breakoutboard_common.c  breakoutboard_hal_0.c  breakoutboard_hal_1.c  breakoutboard_hal_100.c  breakoutboard_hal_2.c  breakoutboard_hal_3.c  breakoutboard_hal_user.c
hal-driver/pi_zero2_gui/utility/: image_converter.py
hal-driver/test_config/: bb1_postgui.hal  bb1_pygame_panel.py  bb1_qt_panel.py  bb1_test.md  lathe_threading.hal  stepper-ninja-minimal.hal  stepper-ninja.hal  stepper-ninja.ini  test_postgui.hal
utility/: bcm2835.c  bcm2835.h  bcm2835rt.h  benchmark.c  benchmark_udp  build.sh  config.h  footer.h  jump_table.py  python_minimal.py  stepper_ninja.py  transmission.h
utility/counter/: CMakeLists.txt  README.md  build_encodercounter.sh  build_stepcounter.sh  counter_webserver.c  encoder_counter.pio  step-dir-counter.uf2  step_counter.pio  webpage.c  webpage.h
